--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:&lt;your@email.com&gt;">
+  <a href="mailto:&lt;ninel.akhmadikina@gmail.com&gt;">
     <span class="fas fa-envelope fa-lg"></span>
      
   </a>
 </li>
 <li>
-  <a href="http://github.com/USERNAME/">
+  <a href="http://github.com/Nakhmad/">
     <span class="fas fa-github fa-lg"></span>
      
   </a>
@@ -325,20 +325,20 @@ $(document).ready(function () {
 
 <p><img src="avatar.jpg" style=width:40% class="img-circle"></p>
 <p><br></p>
-<div id="welcome-i-am-bevo-xv." class="section level1">
-<h1>Welcome! I am Bevo XV.</h1>
+<div id="welcome-i-am-nelly-akhmadikina." class="section level1">
+<h1>Welcome! I am Nelly Akhmadikina.</h1>
 <p></br></p>
-<div id="i-weigh-almost-one-ton-and-my-horns-are-5-feet-long-from-tip-to-tip." class="section level5">
-<h5>I weigh almost one ton and my horns are ~5 feet long from tip to tip.</h5>
+<div id="i-am-a-fourth-year-biology-and-public-health-major." class="section level5">
+<h5>I am a fourth year biology and Public Health major.</h5>
 </div>
-<div id="i-enjoy-football-and-chewing-on-various-grasses." class="section level5">
-<h5>I enjoy football and chewing on various grasses.</h5>
+<div id="i-enjoy-crochetting-synchronized-swimming-and-rollerskating." class="section level5">
+<h5>I enjoy crochetting, synchronized swimming, and rollerskating.</h5>
 </div>
-<div id="i-do-not-like-the-uga-bulldog-and-i-do-not-hold-any-advanced-degrees." class="section level5">
-<h5>I do not like the UGA Bulldog and I do not hold any advanced degrees.</h5>
+<div id="i-hope-to-work-with-lgbt-non-profit-organizations-once-i-graduate." class="section level5">
+<h5>I hope to work with LGBT non-profit organizations once I graduate.</h5>
 </div>
-<div id="i-dont-have-any-data-related-projects-either-but-if-i-did-you-could-find-them-here" class="section level5">
-<h5>I don’t have any data-related projects either, but if I did you could find them <a href="/portfolio">here</a>!</h5>
+<div id="i-dont-have-any-data-related-projects-yet-but-if-i-did-you-could-find-them-here" class="section level5">
+<h5>I don’t have any data-related projects yet, but if I did you could find them <a href="/portfolio">here</a>!</h5>
 <hr />
 </div>
 </div>
